# SnakeForge

./: .editorconfig  .gitignore  README.md  copier.yaml  extensions.py  pyproject.toml
copier/: messages.yaml  profiles.yaml  settings.yaml  tasks.yaml
copier/questions/: author.yaml  misc.yaml  normalized_names.yaml  project.yaml  python_versions.yaml  repository.yaml  socials.yaml
docs/: documentation.md  github-action.md  github-actions.md  pre-commit-hooks.md  pre-commit.md  versioning.md
includes/: semver_utils.jinja
includes/licenses/: 0BSD.jinja  README.md
template/: .gitignore  .pre-commit-config.yaml  LICENSE.jinja  README.md.jinja  hatch_build.py  hatch_build.py.jinja  mkdocs.yml.jinja  pyproject.toml  pyproject.toml.jinja
template/.github/: dependabot.yml
template/.github/workflows/: ci.yaml.jinja  publish.yaml.jinja
template/docs/: index.md.jinja  reference.md.jinja
template/src/: __about__.py  __about__.py.jinja
template/src/{{module_name}}/: __about__.py.jinja  __init__.py.jinja
template/tests/: test_examples.py
template/tools/commitizen_version_provider/: __init__.py.jinja
tests/: test_copier_config_compilation.py
