[project]
name = "copier-python"
version = "0.1.0"
description = "Your favorite Python template ðŸ"
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.12"
keywords = ["copier", "python", "template", "copier-template", "copier-python"]
authors = [{ name = "Kajih", email = "itskajih@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
]
dependencies = [
    "commitizen>=4.8.3",
    "copier>=9.7.1",
    "copier-templates-extensions>=0.3.1",
    "pre-commit>=4.2.0",
    "uv>=0.7.18",
]

    [project.urls]
    # Homepage = "https://github.com/Kajiih/SnakeForge"
    # Documentation = "https://TODO"
    Repository = "https://github.com/Kajiih/SnakeForge"
    Issues = "https://github.com/Kajiih/SnakeForge/issues"
    # Changelog = "https://TODO"

[dependency-groups]
dev = [
    "codespell>=2.4.1",
    "djlint>=1.36.4",
    "hatchling>=1.27.0",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]

[tool.ruff] # https://docs.astral.sh/ruff/settings
fix = true
preview = true
line-length = 100
extend-include = ["*.ipynb"]
    # extend-exclude = ["template"]
    [tool.ruff.format]
    preview = true
    docstring-code-format = true

    [tool.ruff.lint]
    preview = true
    logger-objects = ["loguru.logger"]

    pydocstyle.convention = "google"
    flake8-annotations.mypy-init-return = true

    select = ["ALL"]

    ignore = [
        # === Rules incompatible with Ruff formatter  ===
        "W191",   # tab-indentation
        "E111",   # indentation-with-invalid-multiple
        "E114",   # indentation-with-invalid-multiple-comment
        "E117",   # over-indented
        "D206",   # docstring-tab-indentation
        "D300",   # triple-single-quotes
        "Q000",   # bad-quotes-inline-string
        "Q001",   # bad-quotes-multiline-string
        "Q002",   # bad-quotes-docstring
        "Q003",   # avoidable-escaped-quote
        "COM812", # missing-trailing-comma
        "COM819", # prohibited-trailing-comma
        "ISC002", # multi-line-implicit-string-concatenation
        "W291",   # trailing whitespace
        "W292",
        "W293",
        "E271",

        # === Convenience ===
        "CPY001", # Copyright notice at top of file
        "ISC001", # Checks for implicitly concatenated strings on a single line. -- Should not be used with formatter
        "D212",   # Multi-line docstring summary should start at the first line
        "TD002",  # Missing author in TODO; try: `TODO(<author_name>): ...` or `TODO @<author_name>: ...`
        "TD003",  # Missing issue link on the line following this TODO
        "TD004",  # Missing colon after TODO
        "FIX002",
        # --- Trying out ---
        # "D105",   # Missing docstring in magic method
        # "D107",   # Missing docstring in `__init__`
        # "ANN401", # Dynamically typed expressions (typing.Any) are disallowed in
        # "RET504", # Unnecessary assignment to `...` before `return` statement


        # TODO: Comment out for production release
        "ERA001", # Found commented-out code
        "S101",   # Use of `assert` detected
        "G004",   # Logging statement uses f-string

        # TODO: Uncomment to check docs
        "DOC201", # No return in docs
    ]
        [tool.ruff.lint.per-file-ignores]
        "tests/*" = [
            "INP001",
            "SLF001",  # Private member accessed: `self._foo`
            "D100",    # Missing docstring in public module
            "D101",    # Missing docstring in public class
            "D102",    # Missing docstring in public method
            "D103",    # Missing docstring in public function
            "PLR6301", # Method `` could be a function, class method, or static method
            "PLR2004", # Magic value used in comparison, consider replacing `` with a constant variable
            "ANN",
        ]
        "*.ipynb" = [
            "D101", # Missing docstring in public class
            "D103", # Missing docstring in public function
        ]
        "dev/_*" = [
            "D103", # Missing docstring in public function
        ]

        [tool.ruff.lint.flake8-import-conventions.extend-aliases]
        "typed_settings" = "ts"


[tool.codespell]
write-changes = true
check-filenames = true
